2014-06-21  Pierre Aubert  <pierre@imac-pierre.home>

	* roles/7pi/templates/nginx/7pi.conf.j2: ocsp disable BUG BUG BUG

	* roles/7pi/templates/7pi-sso.conf.j2: idem

	* roles/7pi/templates/7pi-rssfeeds.conf.j2: put key in vars

	* roles/X11/tasks/synergy.yml: add ip for server

2014-06-14  Pierre Aubert  <pierre@imac-pierre.home>

	* roles/common/tasks/collectd.yml: remove postgresql conf from
	common and move it to databases tasks

	* roles/X11/tasks/xrandr.yml: idem

	* roles/X11/tasks/synergy.yml: add config file

	* roles/common/templates/collectd/collection.conf.j2 (datadir):
	put everything in /var/lib/collectd and not in sub rrd

2014-06-13  Pierre Aubert  <pierre@imac-pierre.home>

	* roles/databases/templates/postgresql.conf.j2
	(checkpoint_segments): setup to 16
	(shared_buffers): run pgtunes and setup a few values higher
	lot of ram on servers, thus increase to let 64GB for pg
	4 SSD 0+1

2014-06-11  Pierre Aubert  <pierre@imac-pierre.home>

	* roles/7pi/tasks/postgresql.yml: add grant

	* roles/7pi/tasks/common.yml: add httpretty

2014-06-08  Pierre Aubert  <pierre@imac-pierre.home>

	* roles/7pi/tasks/common.yml: install bs4 and not bs3

2014-06-06  Pierre Aubert  <pierre@imac-pierre.home>

	* roles/databases/tasks/postgresql.yml: swap orders in case of reboot

2014-06-02  Pierre Aubert  <pierre@imac-pierre.home>

	* roles/databases/templates/postgresql.conf.j2 (ssl): put ssl off,
	i do not understand how pg_hba work

2014-05-26  Pierre Aubert  <pierre@imac-pierre.home>

	* roles/databases/templates/postgresql.conf.j2 (wal_level):
	activate hot_standy

	* tsuru is working; paas with docker.io :)

	* add a automatic backup

	* roles/admin/templates/nginx_kibana.conf.j2: put kibana on port 7080

	* roles/tsuru/tasks/gandalf.yml: add service

	* roles/common/files/hddtemp.conf (DISKS): add 4 disks

	* roles/admin/tasks/elasticsearch.yml: adapt to 14.04

2014-05-25  Pierre Aubert  <pierre@imac-pierre.home>
