@@ -47,6 +47,7 @@
   tags: 
     - 7pi
     - nginx
+    - debug
 
 - name: nginx | link virtualhost in site-enable
   file: src=/etc/nginx/sites-available/7pi_eu.conf
