@@ -2,7 +2,9 @@
 - name: Configure individual collectd plugin
   template: src=collectd/collectd.conf.d/{{item}}.conf.j2 dest=/etc/collectd/collectd.conf.d/{{item}}.conf
   with_items:
-  - apache
-  tags: collectd
-  notify: restart collectd
+    - apache
+  tags: 
+    - collectd
+  notify: 
+    - restart collectd
 
