@@ -1,0 +1,16 @@
+[nx_extract]
+username = naxsi_web
+password = test
+port = 8081
+rules_path = /etc/nginx/naxsi_core.rules
+
+[nx_intercept]
+port = 8080
+
+[sql]
+dbtype = sqlite
+username = root
+password =
+hostname = 127.0.0.1
+dbname = naxsi_sig
+
